--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>数据目录</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="top-bar">
-        <div class="logo">
-            <img src="images/LOGO.png" alt="">
-            <h1>中医大数据开放平台</h1>
-        </div>
+        <div class="top-bar">
+            <div class="logo">
+                <img src="images/LOGO.png" alt="">
+                <h1>中医大数据开放平台</h1>
+            </div>
         <div class="catalog">
             <ul class="navs">
                 <li>
