--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="images/LOGO.png" alt="">
                 <h1>中医大数据开放平台</h1>
             </div>
-        <div class="catalog">
+        <div class="top-nav">
             <ul class="navs">
                 <li>
                     首页<br>
@@ -39,6 +39,14 @@
             <input type="button" class="register-btn" value="注册">
         </div>
     </div>
+    <div class="page-header">
+        <ul class="mian-nav">
+            <li>数据样本</li>
+            <li>数据目录</li>
+            <li>热点数据</li>
+        </ul>
+    </div>
+    
 </body>
 
 </html>
