--- a/index.html
+++ b/index.html
@@ -18,24 +18,20 @@
         <div class="top-nav">
             <ul>
                 <li>
-                    首页
-                    <br>
-                    <span>Home</span>
+                    <div class="zh">首页</div>
+                    <div class="en">Home</div>
                 </li>
                 <li>
-                    数据
-                    <br>
-                    <span class="text">Data</span>
+                    <div class="zh">数据</div>
+                    <div class="en">Data</div>
                 </li>
                 <li>
-                    开放统计
-                    <br>
-                    <span class="text">Open statistics</span>
+                    <div class="zh">开放统计</div>
+                    <div class="en">Open statistics</div>
                 </li>
                 <li>
-                    联系我们
-                    <br>
-                    <span class="text">Contact Us</span>
+                    <div class="zh">联系我们</div>
+                    <div class="en">Contact</div>
                 </li>
             </ul>
         </div>
@@ -56,7 +52,6 @@
         <div class="section-left">
             <div class="hospital">
                 <h3>医院</h3>
-                <hr class="first-line">
                 <input type="button" class="region" value="&nbsp;&nbsp;地区&nbsp;&nbsp;">
                 <select id="hospitalGradeSelect" class="hospital-grade-select" value="医院等级">
                     <option value="医院等级">&nbsp;&nbsp;医院等级&nbsp;&nbsp;</option>
@@ -70,7 +65,6 @@
 
             <div class="disease">
                 <h3>病症</h3>
-                <hr class="first-line">
                 <select id="diseaseSelect" class="disease-select">
                     <option value="&nbsp;&nbsp;疾病&nbsp;&nbsp;">疾病</option>
                 </select>
@@ -80,7 +74,6 @@
 
             <div class="patient">
                 <h3>患者</h3>
-                <hr class="first-line">
                 <input type="button" class="sex" value="&nbsp;&nbsp;性别&nbsp;&nbsp;"> &nbsp;
                 <input type="button" class="classification" value="&nbsp;&nbsp;人群分类&nbsp;&nbsp;">
                 <br>
@@ -89,7 +82,6 @@
 
             <div class="others">
                 <h3>其他</h3>
-                <hr class="first-line">
                 <input type="button" class="up-time" value="上传时间">
                 <input type="button" class="quality" value="疾病质量">
             </div>
@@ -100,25 +92,21 @@
                 <span class="case-num">病案数量：1546</span>
                 <img src="images/下载.png" alt="">
             </div>
-            <hr class="second-line">
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
                 <img src="images/下载.png" alt="">
             </div>
-            <hr class="second-line">
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
                 <img src="images/下载.png" alt="">
             </div>
-            <hr class="second-line">
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
                 <img src="images/下载.png" alt="">
             </div>
-            <hr class="second-line">
         </div>
 </body>
 
