--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>数据目录</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_622526_xpy18va7ltc8r529.css">
 </head>
 
 <body>
@@ -48,6 +49,7 @@
             <li>热点数据</li>
         </ul>
     </div>
+
     <div class="section">
         <div class="section-left">
             <div class="hospital">
@@ -86,26 +88,30 @@
                 <input type="button" class="quality" value="疾病质量">
             </div>
         </div>
+
         <div class="section-right">
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
-                <img src="images/下载.png" alt="">
+                <i class="icinfont card">&#xe774;</i>
             </div>
+
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
-                <img src="images/下载.png" alt="">
+                <i class="icinfont card">&#xe774;</i>
             </div>
+
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
-                <img src="images/下载.png" alt="">
+                <i class="icinfont card">&#xe774;</i>
             </div>
+
             <div class="record">
                 <span class="doctor-number">医生编号：XXXXX</span>
                 <span class="case-num">病案数量：1546</span>
-                <img src="images/下载.png" alt="">
+                <i class="icinfont card">&#xe774;</i>
             </div>
         </div>
 </body>
